week 4 memory blog

--- a/_posts/2015-02-21-week4.md
+++ b/_posts/2015-02-21-week4.md
@@ -13,4 +13,23 @@ I had the four phases of the main game phase as four different pages already. My
 This worked quite well. I had taken a bit of time to familarise myself with AngularJS, the client side choise of framework, and read a few chapters about simple development in the O'Reilley guide. However, the best way to learn a language is to take time reading, but also write a substantial project using it, otherwise all the information too easily slips from one's head. I began development, quickly ran into problems, but uncovered mis-understandings of how AngularJS is used, and bit by bit learned how best to use it.
 
 ### A Server and Development Process
-In order for others to test the game, it needs to be hosted in a place that can support a Ruby on Rails application. I found that RedHat offer free hosting for up to three web applications, and give support for Ruby on Rails as well. Their system can pull a project directly from GitHub and then deploy it. I spent a few hours setting this up, and creating a Rails framework 
+In order for others to test the game, it needs to be hosted in a place that can support a Ruby on Rails application. I found that RedHat offer free hosting for up to three web applications, and give support for Ruby on Rails as well. Their system can pull a project directly from GitHub and then deploy it. I spent a few hours setting this up, and creating a Rails framework.
+
+### Rails Assets
+Integrating Rails and AngularJS took a while to figure out. Rails provides automatic minification of javascirpts, and loads them automatically in one go. However, this meant I could not control the order the different scripts loaded in. My solution was to pull out the Angular library scripts and include them manually before the compiled and loaded custom scripts.
+
+Finding images also proved a bit of a challenge. In the end I moved all images and templates to be served by AngularJS into the public folder,away from the assets. This is because Rails changes their file path to 'make things easier'.
+
+### Routing
+In order to change views, using the Angular [ngRoute library](https://docs.angularjs.org/api/ngRoute) made sense. A few tutorials are available for this, but I ran into problems with the library, and tried another library [UI-Router](https://github.com/angular-ui/ui-router). However, this had the same issues, but less support, so when I figured out my miss-understanding, I changed back to the ngRoute library. Route names have to follow a hash after the domain name, to prevent the browser reloading the page. This makes sense in hind-sight, as it treats the page url's like a resourse.
+
+### Resources
+[ngResource](https://docs.angularjs.org/api/ngResource/service/$resource) is a fairly simple Angular library that allows quick and easy interaction with a RESTful API. This is just what I wanted. However, in order to use it, I arranged hard coded JSON in the Rails controllers to be returned by the client side requests. This worked, but I did not encode the JSON string that Rails returned correctly, so for a few hours I was at a loss as to why the resources were not being returned. The answer was to remove the quotes form around the JSON in the Rails controller, then the resources appeared in the Angular controllers.
+
+### Bootstrap Directives
+Some Angular savy people have created the common JQuery directed features of [Bootstrap in Angular-speak](http://angular-ui.github.io/bootstrap/). So that they can be used without touching JQuery. Some of them work really well, but others are still under development, or the developers disagree about what they should impliment. Anyway, the modal and popover are two of these directives which don't work as expected. I ended up continuing to use JQuery to manage these, as they are simply click oriented features and not worth the pain of learning the new Angular syntax. This may change later in the project if more complex features are needed.
+
+### Work Accomplished
+So with all the learning curves above, what did I actually manage to do? Well, I took the HTML templates and created Angular controllers to govern them. The main sections are the Menu, the Cow information, and the four Phases. I updated styles, and integrated live data returned from the server into these areas.
+
+One area that proved easier than I thought was moving rations on the game board. This area is not finished, but a recursive template allows the possible positions a ration can move to, be easily shown and controlled.
